# pickles

./: .example.env  .gitignore  .mcp.json  NOTION_STYLE_GUIDE_FOR_FIGMA_MAKE.md  ONBOARDING.md  PR_DESCRIPTION.md  README.md  capture_mock.py  example.env  main.py  pyproject.toml  pytest.ini  read_spreadsheet_and_execute.py  read_spreadsheet_and_execute_dev.py  requirements.txt
.cursor/rules/: clean-functional-python-standards.mdc  docs-styles-guide.mdc  onboarding.mdc
.github/: pull_request_template.md
.github/workflows/: developer-test.yml  pickles-report-admin.yml  pickles-report-en.yml  pickles-report-ja.yml  pickles-report-production.yml  pickles-report-prototype.yml  pickles-report.yml  setup-secrets.md  weekly-report.yml  weekly-report.yml~
db/: __init__.py  client.py
db/migrations/: 20251215000000_create_users_table.sql  20251215000001_create_analysis_runs_table.sql  20251215000003_create_execution_history_view.sql  20260105002422_replace_stats_summary_with_numeric_columns.sql  20260105005004_drop_stats_summary_column.sql  20260105012620_fix_execution_history_security_invoker.sql  (+1 more)
docs/: DATABASE_DESIGN.md  FERMENTATION_DESIGN.md  FIGMA_MAKE_INSTRUCTIONS.md  IDEMPOTENT_SWITCH_UX.md  WYSIWYG_MARKDOWN_EDITOR_DESIGN.md
inputs/: __init__.py  gdocs_input.py  notion_input.py
models/: __init__.py  analysis_run.py  delivery.py  user.py
outputs/: __init__.py  report_generator.py
tests/: conftest.py
tests/fixtures/: __init__.py  (+2 more)
throughput/: __init__.py  analysis_history.py  analyzer.py
utils/: __init__.py  google_service.py  logger.py  printer.py
(+13 files in other folders)
