[project]
name = "pickles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.0",
    "notion-client>=2.3.0",
    "openai>=1.84.0",
    "python-dotenv>=1.1.0",
    "google-auth>=2.29.0",
    "google-api-python-client>=2.137.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-timeout>=2.4.0",
]
